--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Sync S3 bucket
       run: |
-        aws s3 sync cp /build s3://${{ secrets.S3_BUCKET_NAME }} --delete
+        aws s3 cp build/ s3://$S3_BUCKET_NAME/ --recursive --include "*"
 
     - name: Output S3 Website URL
       run: |
