--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,8 @@ jobs:
 
     - name: Sync S3 bucket
       run: |
-        aws s3 cp build/ s3://$S3_BUCKET_NAME/ --recursive --include "*"
+        aws s3 sync ./dist s3://${{ secrets.S3_BUCKET_NAME }} --delete
 
     - name: Output S3 Website URL
       run: |
-        echo "S3 Website URL: http://${{ secrets.S3_BUCKET_NAME }}.s3-website-${{ secrets.AWS_REGION }}.amazonaws.com"
+        echo "S3 Website URL: http://${{ secrets.S3_BUCKET_NAM }}.s3-website-${{ secrets.AWS_REGION }}.amazonaws.com"
