--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS S3
+name: Deploy to AWS S3 and Configure Subdomain
 
 on:
   push:
@@ -34,6 +34,33 @@ jobs:
       run: |
         aws s3 sync ./dist s3://${{ secrets.S3_BUCKET_NAME }} --delete
 
+    - name: Invalidate CloudFront cache (optional)
+      if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID != '' }}
+      run: |
+        aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+
     - name: Output S3 Website URL
       run: |
-        echo "S3 Website URL: http://${{ secrets.S3_BUCKET_NAM }}.s3-website-${{ secrets.AWS_REGION }}.amazonaws.com"
+        echo "S3 Website URL: http://${{ secrets.S3_BUCKET_NAME }}.s3-website-${{ secrets.AWS_REGION }}.amazonaws.com"
+
+    - name: Update Route 53 DNS Record
+      run: |
+        aws route53 change-resource-record-sets \
+          --hosted-zone-id ${{ secrets.ROUTE53_HOSTED_ZONE_ID }} \
+          --change-batch '{
+            "Changes": [
+              {
+                "Action": "UPSERT",
+                "ResourceRecordSet": {
+                  "Name": "${{ secrets.SUBDOMAIN }}",
+                  "Type": "CNAME",
+                  "TTL": 60,
+                  "ResourceRecords": [
+                    {
+                      "Value": "${{ secrets.S3_BUCKET_NAME }}.s3-website-${{ secrets.AWS_REGION }}.amazonaws.com"
+                    }
+                  ]
+                }
+              }
+            ]
+          }'
