--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,23 +39,23 @@ jobs:
         echo "S3 Website URL: http://${{ secrets.S3_BUCKET_NAME }}.s3-website-${{ secrets.AWS_REGION }}.amazonaws.com"
 
     - name: Update Route 53 DNS Record
-      run: |
-        aws route53 change-resource-record-sets \
-          --hosted-zone-id ${{ secrets.ROUTE53_HOSTED_ZONE_ID }} \
-          --change-batch '{
-            "Changes": [
-              {
-                "Action": "UPSERT",
-                "ResourceRecordSet": {
-                  "Name": "${{ secrets.SUBDOMAIN }}",
-                  "Type": "CNAME",
-                  "TTL": 60,
-                  "ResourceRecords": [
-                    {
-                      "Value": "${{ secrets.S3_BUCKET_NAME }}.s3-website-${{ secrets.AWS_REGION }}.amazonaws.com"
-                    }
-                  ]
+  run: |
+    aws route53 change-resource-record-sets \
+      --hosted-zone-id ${{ secrets.ROUTE53_HOSTED_ZONE_ID }} \
+      --change-batch '{
+        "Changes": [
+          {
+            "Action": "UPSERT",
+            "ResourceRecordSet": {
+              "Name": "${{ secrets.SUBDOMAIN }}.manishmoneymanage.tech.",
+              "Type": "CNAME",
+              "TTL": 60,
+              "ResourceRecords": [
+                {
+                  "Value": "${{ secrets.S3_BUCKET_NAME }}.s3-website-${{ secrets.AWS_REGION }}.amazonaws.com"
                 }
-              }
-            ]
-          }'
+              ]
+            }
+          }
+        ]
+      }'
