--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,53 +1,42 @@
-name: Deploy to Vercel
+name: Build and Deploy to Docker Hub
 
 on:
   push:
     branches:
-      - main  # Change this to your deployment branch
+      - main
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Check Out Repo
+      uses: actions/checkout@v2
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
       with:
-        node-version: '16'  # Specify your Node.js version
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Install dependencies
-      run: |
-        npm install
-        npm install -g vercel  # Install Vercel CLI
+    - name: Build and Push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./dockerfile
+        push: true
+        tags: scalestorefrontend:latest  # Replace with your Docker Hub username and repository
 
-    - name: Deploy to Vercel
-      id: deploy
-      run: |
-        DEPLOYMENT_URL=$(vercel --prod --confirm --token ${{ secrets.VERCEL_TOKEN }} | grep "https://" | awk '{print $1}')
-        echo "Deployment URL: $DEPLOYMENT_URL"
-        echo "DEPLOYMENT_URL=$DEPLOYMENT_URL" >> $GITHUB_ENV
+    - name: Verify Pushed Image
+      run: docker pull scalestorefrontend:latest  # Replace with your Docker Hub username and repository
 
-    - name: Add Custom Subdomain to Vercel
-      run: |
-        curl -X POST "https://api.vercel.com/v9/projects/${{ secrets.VERCEL_PROJECT_ID }}/domains" \
-          -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}" \
-          -H "Content-Type: application/json" \
-          -d '{
-            "name": "${{ secrets.SUBDOMAIN }}.manishmoneymanage.tech"
-          }'
-
-    - name: Assign Subdomain to Deployment
-      run: |
-        curl -X PATCH "https://api.vercel.com/v2/domains/${{ secrets.SUBDOMAIN }}.manishmoneymanage.tech" \
-          -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}" \
-          -H "Content-Type: application/json" \
-          -d '{
-            "project": "${{ secrets.VERCEL_PROJECT_ID }}"
-          }'
-
-    - name: Output Deployment URL with Subdomain
-      run: |
-        echo "Subdomain URL: https://${{ secrets.SUBDOMAIN }}.manishmoneymanage.tech"
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          sudo docker pull 
+          sudo docker stop cicdwork || true
+          sudo docker rm cicdwork || true
+          sudo docker run -d --name cicdwork -p 3005:4000 scalestorefrontend:latest
