--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: scalestorefrontend:latest  # Replace with your Docker Hub username and repository
+        tags: techmanish2004/scalestorefrontend:latest  # Replace with your Docker Hub username and repository
 
     - name: Verify Pushed Image
-      run: docker pull scalestorefrontend:latest  # Replace with your Docker Hub username and repository
+      run: docker pull techmanish2004/scalestorefrontend:latest  # Replace with your Docker Hub username and repository
 
     - name: Deploy to EC2
       uses: appleboy/ssh-action@master
@@ -37,6 +37,6 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
           sudo docker pull 
-          sudo docker stop cicdwork || true
-          sudo docker rm cicdwork || true
-          sudo docker run -d --name cicdwork -p 3005:4000 scalestorefrontend:latest
+          sudo docker stop ok || true
+          sudo docker rm ok || true
+          sudo docker run -d --name ok -p 3005:4000 scalestorefrontend:latest
