--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -19,6 +20,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
